# CHiP

./: .gitignore  README.md
imtecho-android/: .gitignore  build.gradle  gradle.properties  settings.gradle
imtecho-android/core-llm/: build.gradle.kts
imtecho-android/core-llm/src/main/: AndroidManifest.xml
imtecho-android/gradle/: libs.versions.toml
imtecho-android/gradle/wrapper/: gradle-wrapper.properties
imtecho-android/sewa-android/: build.gradle
imtecho-android/sewa-android/keystore/: chipkeystore.jks  new_chip_keystore.jks
imtecho-android/sewa-android/release/: output-metadata.json
imtecho-android/sewa-android/src/main/: AndroidManifest.xml
imtecho-android/sewa-android/src/main/cpp/: CMakeLists.txt  medllm.cpp  medllm.h  medwhisper.cpp  medwhisper.h
imtecho-android/sewa-android/staging/: output-metadata.json
imtecho-ui/: Gruntfile.js  TeCHO+ Comprehensive Primary Health Care Solution.pptx  bower.json  index.html  package-lock.json  package.json  protractor.conf.js  redirect.html  telangana-topo-2.json
imtecho-ui/app/: app.js  config.js  config.lazyload.js  config.router.js
imtecho-ui/app/common/constants/: app.constants.js  rch.constants.js  search.constants.js
imtecho-ui/app/common/controllers/: layout.controller.js  main.controller.js  map.modal.controller.js  qr-code-scan.modal.controller.js  update-user-profile.controller.js
imtecho-ui/app/common/filters/: family-planning.filter.js
imtecho-ui/app/common/services/: authentication.service.js  document.service.js  immunisation.service.js  paging-for-form-configurator-query.service.js
imtecho-ui/app/common/views/: layout.html  map.modal.html  qr-code-scan.modal.html  search-members.html  update-user-profile.html
imtecho-ui/app/fieldsupportofficer/controllers/: manageabsentusers.controller.js
imtecho-ui/app/fieldsupportofficer/views/: manageAbsentUsers.html
imtecho-ui/app/login/controllers/: forget-password.controller.js  login.controller.js
imtecho-ui/app/login/views/: forget-password.html  info.html  login-download.html  login.html
imtecho-ui/app/manage/constants/: user.constants.js
imtecho-ui/app/manage/service/: query.service.js
imtecho-ui/bower_components/angular-all-ordinal/: .bower.json
imtecho-ui/bower_components/angular-animate/: .bower.json
imtecho-ui/bower_components/angular-cookies/: .bower.json
imtecho-ui/bower_components/angular-mocks/: .bower.json
imtecho-ui/bower_components/font-awesome/: .bower.json
imtecho-ui/bower_components/jquery-ui/: .bower.json
imtecho-ui/bower_components/underscore/: .bower.json
imtecho-ui/nbproject/: project.properties  project.xml
imtecho-ui/styles/css/: developer.css  patientsummary.css  printable.css  scroll.css  style.css  ui-tree.css
imtecho-ui/styles/js/: custom.js
imtecho-web/: nbactions-dev.xml  nbactions.xml  pom.xml
imtecho-web/.run/: Run.run.xml
(+3611 files in other folders)
